--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,10 @@
   "builds": [
     {
       "src": "main.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
     }
   ],
   "routes": [
@@ -14,6 +17,13 @@
     }
   ],
   "env": {
-    "PYTHONPATH": ".vercel/source"
+    "PYTHONPATH": ".vercel/source",
+    "SESSION_SECRET": "vercel-production-secret-key-change-this"
+  },
+  "functions": {
+    "main.py": {
+      "memory": 1024,
+      "maxDuration": 60
+    }
   }
 }
